# film-sim-camera

./: README.md  camera_preview.py  lut_test.py  triangle.raw
config/shader/: stillcapture_fs.glsl  stillcapture_vs.glsl  text_fs.glsl  viewfinder_fs.glsl  viewfinder_vs.glsl
cpp/: CMakeLists.txt  Drm.hpp  Filter.cpp  Filter.hpp  FrameManager.hpp  PiCamera.cpp  PiCamera.hpp  ShaderManager.cpp  ShaderManager.hpp  Touchscreen.hpp  camdrm.cpp  dma_heaps.cpp  dma_heaps.hpp  log.hpp  modeset.c  rect.c  test.c  view_fs.glsl  view_vs.glsl
